--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,3 +2,12 @@
 ---
 
 @import 'jekyll-theme-dinky';
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
+
