fixed typo in menu

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
 		<span>Tutorials</span>
 		<ul>
 			{% if site.show_install %}<li><a href="/www/install.html">Installation</a></li>{% endif %}
-			{% if site.show_emptymap %}<li><a href="/www/empty_map.html">Installation</a></li>{% endif %}
+			{% if site.show_emptymap %}<li><a href="/www/empty_map.html">Create an empty map</a></li>{% endif %}
 		</ul>
 		<span>Links</span>
 		<ul>
