--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
 		<ul>
 			{% if site.show_install %}<li><a href="/www/install.html">Installation</a></li>{% endif %}
 			{% if site.show_emptymap %}<li><a href="/www/empty_map.html">Create an empty map</a></li>{% endif %}
-			{% if site.show_appearance %}<li><a href="/www/appearances.html">Change your appearance</a></li>{% endif %}
+			{% if site.show_appearance %}<li><a href="/www/appearances.html">Change Skins</a></li>{% endif %}
 		</ul>
 		<span>Links</span>
 		<ul>
