--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,8 @@
 			{% if site.show_install %}<li><a href="/www/install.html">Installation</a></li>{% endif %}
 			{% if site.show_emptymap %}<li><a href="/www/empty_map.html">Create an empty map</a></li>{% endif %}
 			{% if site.show_appearance %}<li><a href="/www/appearances.html">Change Skins</a></li>{% endif %}
-			{% if site.show_menu %}<li><a href="/www/menus.html">Game Menus</a></li>{% endif %}			
+			{% if site.show_menu %}<li><a href="/www/menus.html">Game Menus</a></li>{% endif %}
+			<li><a href="/www/abilities.html">Abilities</a></li>
 		</ul>
 		<span>Links</span>
 		<ul>
