adding zoom to images

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,8 @@
 {% seo %}
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
     <script src="{{ '/assets/js/scale.fix.js' | relative_url }}"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/medium-zoom/1.0.8/medium-zoom.min.js"></script>
+	
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 	<link rel="shortcut icon" type="image/x-icon" href="/www/favicon.ico">
 
@@ -14,11 +16,14 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     {% include head-custom.html %}
+	<style type="text/css">
+		.medium-zoom-overlay{position:fixed;top:0;right:0;bottom:0;left:0;opacity:0;transition:opacity .3s;will-change:opacity}.medium-zoom--opened .medium-zoom-overlay{cursor:pointer;cursor:zoom-out;opacity:1}.medium-zoom-image{cursor:pointer;cursor:zoom-in;transition:transform .3s cubic-bezier(.2,0,.2,1)}.medium-zoom-image--hidden{visibility:hidden}.medium-zoom-image--opened{position:relative;cursor:pointer;cursor:zoom-out;will-change:transform}
+	</style>
   </head>
   <body>
     <div class="wrapper">
       <header>
-        <img alt="Developer Bastian" width="130px" src="/www/assets/images/dev.bastian.small.png" />
+        <img alt="Developer Bastian" width="130px" src="/www/assets/images/dev.bastian.small.png" class="medium-zoom-image" />
 		<h1 class="header">{{ site.title | default: site.github.repository_name }}</h1>
         <p class="header">{{ site.description | default: site.github.project_tagline }}</p>
 		<span>Tutorials</span>
