--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <img alt="Developer Bastian" width="130px" src="/www/assets/images/dev.bastian.small.png" class="medium-zoom-image" />
+        <img alt="Developer Bastian" width="130px" src="/www/assets/images/dev.bastian.small.png" />
 		<h1 class="header">{{ site.title | default: site.github.repository_name }}</h1>
         <p class="header">{{ site.description | default: site.github.project_tagline }}</p>
 		<span>Tutorials</span>
