How to generate Lyra Gameplay AttributeSets using a [code generator](https://bit.ly/AttributeGenerator): https://youtu.be/NKlyLHIVkEc

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,6 +33,7 @@
 			{% if site.show_appearance %}<li><a href="/www/appearances.html">Change Skins</a></li>{% endif %}
 			{% if site.show_menu %}<li><a href="/www/menus.html">Game Menus</a></li>{% endif %}
 			<li><a href="/www/abilities.html">Abilities</a></li>
+			<li><a href="/www/attributes.html">Attributes</a></li>
 		</ul>
 		<span>Links</span>
 		<ul>
