Adding a process to get Adobe Mixamo animations and using Python to automate the creation of the necessary notifier tracks Video: https://youtu.be/sgOy5zr2tu8 Notifier tracks added: -	LeftFootFX (for AN_FootPlant_Left) -	RightFootFX (for AN_FootPlant_Right) -	ContextFX (AnimEffect.FootStep.Walk/Land/Jog, ... - best copy from existing Lyra Animation and adjust accordingly) -	FootSyncMarkers

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,6 +34,7 @@
 			{% if site.show_menu %}<li><a href="/www/menus.html">Game Menus</a></li>{% endif %}
 			<li><a href="/www/abilities.html">Abilities</a></li>
 			<li><a href="/www/attributes.html">Attributes</a></li>
+			<li><a href="/www/animations.html">Animations</a></li>
 		</ul>
 		<span>Links</span>
 		<ul>
