Corrected typo in menu

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
 			<li><a href="/www/abilities.html">Abilities</a></li>
 			<li><a href="/www/attributes.html">Attributes</a></li>
 			<li><a href="/www/animations.html">Animations</a></li>
-			<li><a href="/www/weapons.html">Animations</a></li>
+			<li><a href="/www/weapons.html">Weapons</a></li>
 		</ul>
 		<span>Links</span>
 		<ul>
